--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
 autopep8==1.5.4
+certifi==2020.12.5
+chardet==4.0.0
 dataclasses==0.6
+idna==2.10
 isodate==0.6.0
 pycodestyle==2.6.0
 PyMuPDF==1.18.5
 pyparsing==2.4.7
 rdflib==5.0.0
+requests==2.25.1
+roman==3.3
 six==1.15.0
 toml==0.10.2
+urllib3==1.26.2
